feat: adiciona configurações no properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#JDBC Config
+spring.datasource.url=jdbc:mysql://localhost:3306/TCC_EngenhariaComputacao?createDatabaseIfNotExist=True
+spring.datasource.username=root
+spring.datasource.password=root
 
+#security
+tcc.jwt.secret=
+tcc.jwt.expiration=
+tcc.jwt.issuer=
