feat: adiciona spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 #security
-tcc.jwt.secret=
+tcc.jwt.secret=${JWT_SECRET:}
 tcc.jwt.expiration=
 tcc.jwt.issuer=
