--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/TCC_EngenhariaComputacao?creat
 spring.datasource.username=root
 spring.datasource.password=root
 
+#flyway
+spring.flyway.enabled=true
+spring.flyway.baselineOnMigrate=true
+
 #security
 tcc.jwt.secret=${JWT_SECRET:}
 tcc.jwt.expiration=
