--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.datasource.password=root
 spring.flyway.enabled=true
 spring.flyway.baselineOnMigrate=true
 
+#thymeleaf
+spring.thymeleaf.cache= false
+
 #security
 tcc.jwt.secret=${JWT_SECRET:}
 tcc.jwt.expiration=
