--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/TCC_EngenhariaComputacao?creat
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
 #flyway
 spring.flyway.enabled=true
 spring.flyway.baselineOnMigrate=true
@@ -14,3 +16,11 @@ spring.thymeleaf.cache= false
 tcc.jwt.secret=${JWT_SECRET:}
 tcc.jwt.expiration=
 tcc.jwt.issuer=
+
+#email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tcc.clinicauam@gmail.com
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
