feat: adiciona Classes de encriptografia

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,9 @@ tcc.jwt.issuer=
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tcc.clinicauam@gmail.com
-spring.mail.password=
+spring.mail.password=rzhzechennonibee
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#encrypt
+tecc.encryption.key=0123456789abcdef
