--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/application.properties
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/application.properties
@@ -10,7 +10,15 @@ spring.flyway.enabled=true
 spring.flyway.baselineOnMigrate=true
 
 #thymeleaf
-spring.thymeleaf.cache= false
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
+spring.thymeleaf.enabled=true
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.servlet.cache=true
 
 #security
 tcc.jwt.secret=${JWT_SECRET:}
