--- a/TCC-EngenhariaComputacao-Principal/pom.xml
+++ b/TCC-EngenhariaComputacao-Principal/pom.xml
@@ -33,11 +33,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
-			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
-			<version>3.1.1.RELEASE</version> <!-- Use the latest version -->
+			<artifactId>thymeleaf-extras-springsecurity3</artifactId>
+			<version>3.0.5.RELEASE</version> <!-- Versão compatível com o Spring 3.0.9 -->
 		</dependency>
+
 		<dependency>
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
@@ -93,6 +95,12 @@
 
 	</dependencies>
 
+	<repositories>
+		<repository>
+			<id>jcenter</id>
+			<url>https://jcenter.bintray.com</url>
+		</repository>
+	</repositories>
 	<build>
 		<plugins>
 			<plugin>
@@ -101,5 +109,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
