Excluir agendamentos ao excluir paciente ou medico

--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/application.properties
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/application.properties
@@ -35,3 +35,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #encrypt
 tecc.encryption.key=0123456789abcdef
+
+#circular-references
+spring.main.allow-circular-references=true
